--- a/app/views/helperCards.ejs
+++ b/app/views/helperCards.ejs
@@ -1,3 +1,8 @@
+<!-- 
+  Student name: Yusuf Adeleke
+  Student id: 301114414
+  Date: Sept 30 2023
+-->
 <% include partials/header.ejs %>
 
 <section id="services">
