--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,3 +1,9 @@
+<!-- 
+  Student name: Yusuf Adeleke
+  Student id: 301114414
+  Date: Sept 30 2023
+-->
+
 <% include partials/header.ejs %>
 
 <main>
@@ -11,10 +17,10 @@
     <img src="content/bg3.jpg" alt="" srcset="" />
   </div>
   <div class="nav-buttons">
-    <button type="button">About Me</button>
-    <button type="button">Services</button>
-    <button type="button">Projects</button>
-    <button type="button">Contact</button>
+    <a href="/about">About Me</a>
+    <a href="/services">Services</a>
+    <a href="/projects">Projects</a>
+    <a href="/contact">Contact</a>
   </div>
 </main>
 
