--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -1,3 +1,9 @@
+<!-- 
+  Student name: Yusuf Adeleke
+  Student id: 301114414
+  Date: Sept 30 2023
+-->
+
 <% include partials/header.ejs %>
 
 <section id="about">
@@ -17,6 +23,7 @@
       <li>🤝 Exceptional teamwork skills</li>
       <li>🤝 Exceptional teamwork skills</li>
       <li>📫 How to reach me: via email (adelekeyusuf29@gmail.com)</li>
+      <li><a href="../content/Resume.pdf" target="_blank">My Resume</a></li>
     </ul>
   </div>
   <div class="about-profile"></div>
