--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse offset-md-3 links" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
