--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,7 @@ main {
   font-family: "Lobster", cursive;
   font-size: 3rem;
   color: #dde6ed;
+  animation: scroll-up 0.5s ease-in-out;
 }
 .content h1 span {
   color: #004225;
@@ -63,6 +64,7 @@ main {
   -webkit-background-clip: text; /* For Safari */
   background-clip: text;
   color: transparent;
+  animation: scroll-up 0.5s ease-in-out;
 }
 
 .profile img {
@@ -75,8 +77,13 @@ main {
   display: flex;
   flex-direction: column;
   align-items: start;
+  animation: scroll-up 0.5s ease-in-out;
 }
-.nav-buttons button {
+a {
+  text-decoration: none !important;
+}
+.nav-buttons a {
+  background-color: #f5f5f5;
   font-family: "League Spartan", sans-serif;
   height: 3rem;
   padding: 0.5rem 2.5rem;
@@ -87,22 +94,21 @@ main {
   text-align: start;
   cursor: pointer;
   padding-right: 4rem;
+  text-decoration: none;
+  color: #292b2c;
 }
-.nav-buttons button:nth-child(2) {
+.nav-buttons a:nth-child(2) {
   background-color: #ff6d60;
   color: #f5f5f5;
   padding-right: 3.5rem;
 }
-.nav-buttons button:nth-child(3) {
-  padding-right: 3rem;
-}
-.nav-buttons button:nth-child(4) {
+.nav-buttons a:nth-child(4) {
   background-color: #004225;
   color: #f5f5f5;
   padding-right: 2.5rem;
 }
-.nav-buttons button:hover,
-.nav-buttons button:active {
+.nav-buttons a:hover,
+.nav-buttons a:active {
   transform: translateX(-10px);
   transform: scaleX(1.1);
   transition: all ease-in-out;
@@ -118,6 +124,7 @@ main {
 
 #about .boutme-con {
   padding: 3rem 5rem;
+  animation: scroll-up 0.5s ease-in-out;
 }
 
 #about .boutme-con div {
@@ -160,11 +167,13 @@ main {
   color: #004225;
   padding: 2rem 0rem;
   text-align: center;
+  animation: scroll-up 0.5s ease-in-out;
 }
 .services-con {
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: scroll-up 0.5s ease-in-out;
 }
 .my-card {
   height: 28rem !important;
@@ -175,6 +184,7 @@ main {
 }
 .card-image {
   height: 12rem !important;
+  border-radius: 2rem !important;
 }
 .my-card div {
   margin-top: 5px;
@@ -202,4 +212,42 @@ main {
   background-color: #004225;
   transform: translateY(-3px);
   transition: all ease-in-out;
+}
+
+@keyframes scroll-up {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/*/////////////////////////////////////////////////*/
+#contact {
+  height: calc(100dvh - 3.5rem);
+  background-color: #fff;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contact-info {
+  padding: 30px;
+  background-color: #004225;
+  color: #e4e2e2;
+  border-radius: 0 50px 50px 0;
+  font-family: "Lobster", cursive;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact-info p {
+  font-family: "Roboto Slab", serif;
+}
+.contact-form {
+  padding: 30px;
+  background-color: #fff;
 }
